fix: overflow

--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,8 @@
 }
 
 .icon {
-  width: 35px;
-  height: 35px;
+  width: 20px;
+  height: 20px;
 }
 
 .App {
