--- a/src/components/sideBar/sideBar.css
+++ b/src/components/sideBar/sideBar.css
@@ -2,7 +2,7 @@ nav {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     box-shadow: 0 4px 4px black;
-    width: 280px;
+    width: 200px;
     background-color: white;
     display: flex;
     flex-direction: column;
@@ -15,7 +15,7 @@ nav {
 
 nav h1 {
     color: var(--primary-dark);
-    font-size: 40px;
+    font-size: 30px;
     margin-left: auto;
     margin-right: auto;
     cursor: pointer;
@@ -23,15 +23,16 @@ nav h1 {
 
 nav div {
     border: 1px solid var(--primary-light) ;
-    width: 230px;
+    width: 140px;
     padding: 10px;
     border-radius: 10px;
-    font-size: 25px;
+    font-size: 15px;
     margin-right: auto;
     margin-left: auto;
     display: flex;
     gap: 15px;
     cursor: pointer;
+    align-items: center;
 }
 
 #bottom-bar-top {
