--- a/src/pages/hostPage/nodePage.css
+++ b/src/pages/hostPage/nodePage.css
@@ -38,7 +38,7 @@ select {
     flex-wrap: wrap;
     justify-content: space-between;
     row-gap: 20px;
-    width: 650px;
+    width: 425px;
 }
 
 .row {
